--- a/cfg.cfg
+++ b/cfg.cfg
@@ -7,7 +7,7 @@ URL="https://raw.githubusercontent.com/makupi/pavlov-bot/master/README.md"
 DESTINATION="/home/steam/readmd.md"
 
 #discord webhook needed to log file state 
-WEBHOOK_URL="https://discord.com/api/webhooks/949594512454459422/y0v6LHv-V0o8dsNMTj_ukpZvsiB8SX3a4k5G1fXGXo9QcY_KbjLGDtGkrTSltx6sxRuE"
+WEBHOOK_URL="shit"
 
 # True or False {must use capital}
 WEBHOOK_ENABLED=True
