--- a/cfg.cfg
+++ b/cfg.cfg
@@ -1,7 +1,7 @@
 echo "-------------- CFG LOADED ----------------"
 
 #git hub RAW url must use RAW file 
-URL="https://raw.githubusercontent.com/makupi/pavlov-bot/master/README.md"
+URL="https://raw.githubusercontent.com/something"
 
 #where to save file 
 DESTINATION="/home/steam/readmd.md"
