--- a/cfg.cfg
+++ b/cfg.cfg
@@ -4,11 +4,11 @@ echo "-------------- CFG LOADED ----------------"
 URL="https://raw.githubusercontent.com/something"
 
 #where to save file 
-DESTINATION="/home/steam/readmd.md"
+DESTINATION="/home/steam/pavlovserver/Pavlov/Saved/Config/ModSave/pull.json"
 
 #discord webhook needed to log file state 
-WEBHOOK_URL="shit"
+WEBHOOK_URL="iAmADopeWebhook.org"
 
 # True or False {must use capital}
-WEBHOOK_ENABLED=True
+WEBHOOK_ENABLED=False
 
